<resources>
    <string name="app_name">Calculadora Fitness</string>
    <string name="imc">IMC\n Índice de Massa Corporal</string>
    <string name="tmb">TMB\n Taxa Metabólica Basal</string>
    <string name="imc_desc_complete">O IMC é um cálculo simples que permite avaliar se a pessoa está dentro do peso que é considerado ideal para a sua altura. Também conhecido como Índice de Massa Corporal, o IMC é uma fórmula utilizada por vários profissionais de saúde para saber, de uma forma rápida, se a pessoa precisa ganhar ou perder peso.\n\nPreencha os campos de peso e altura para descobrir o seu IMC</string>
    <string name="tmb_desc_complete">Taxa metabólica basal é um método matemático, não exato, de calcular a quantidade calórica que o corpo necessita, em vinte e quatro horas, para manter-se nutrido durante o decorrer das atividades diárias.\n\nPreencha os campos a seguir para descobrir a sua TMB</string>
    <string name="weight">Peso (Kg)</string>
    <string name="height">Altura (cm)</string>
    <string name="calculate">Calcular</string>
    <string name="imc_formatted">IMC: %1$.2f</string>
    <string name="tmb_title">TMB</string>
    <string name="tmb_formatted">Resultado: %1$.2f calorias diárias</string>
    <string name="imc_severely_low_weight">Severamente abaixo do peso</string>
    <string name="imc_very_low_weight">Muito abaixo do peso</string>
    <string name="imc_low_weight">Abaixo do peso</string>
    <string name="normal">Normal</string>
    <string name="imc_high_weight">Acima do peso</string>
    <string name="imc_so_high_weight">Moderadamente obeso</string>
    <string name="imc_severely_high_weight">Severamente obeso</string>
    <string name="imc_extreme_weight">Extremamente obeso</string>
    <string name="save">Salvar</string>
    <string name="weight_error">Peso deve ser preenchido.(não iniciar com zero)</string>
    <string name="height_error">Altura deve ser preenchida.(não iniciar com zero)</string>
    <string name="age">Idade</string>
    <string name="age_error">Idade deve ser preenchida.(não iniciar com zero)</string>
    <string name="search">Registros</string>
    <string name="registers">Registros</string>
    <string name="calcs">Cálculos</string>
    <string name="calc_imc">Índice de Massa Corporal = Massa / Altura²</string>
    <string name="calc_imc_title">Cálculo de IMC:</string>
    <string name="calc_tmb_title">Cálculo de TMB:</string>
    <string name="tmb_male">Taxa Metabólica Basal (Homem) = 66 + (Peso * 13.8) + (Altura * 5) - (Idade * 6.8)</string>
    <string name="tmb_female">Taxa Metabólica Basal (Mulher) = 655 + (Peso * 9.6) + (Altura * 1.8) - (Idade * 4.7)</string>
    <string name="response_imc_list">IMC: %1$.2f(%2$s) - Data: %3$s</string>
    <string name="response_tmb_list">TMB: %1$.2f calorias diárias - Data: %2$s</string>
    <string name="empty_list">Nenhum registro encontrado</string>
    <string name="really_dalete">Deseja excluir este registro?</string>
    <string name="no">Não</string>
    <string name="delete">Apagar</string>
    <string name="deleted">"Registro apagado "</string>
</resources>